apps/services/establishment-service/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: establishment-service
  namespace: default
  labels:
    app: establishment-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: establishment-service
  template:
    metadata:
      labels:
        app: establishment-service
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: establishment-service
          image: ghcr.io/felipesantos979/vibester-establishment-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3002
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /health
              port: 3002
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 3002
            initialDelaySeconds: 20
            periodSeconds: 30
