apps/services/establishment-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: establishment-service
  namespace: default
  labels:
    app: establishment-service
spec:
  type: ClusterIP
  selector:
    app: establishment-service
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
